- Removed the remainder of the PHP scripting backend
- Fixed: Would crash on tcl/tk events in some cases

--- Version 0.5.4 - Oct-04-2010
- Fixed: Running user commands would crash with R 2.12.0
- Added full-featured plot history for the onscreen graphics device
- Fixed: Potential crash when editing data-frame with duplicate column names
- Added option to specify default onscreen graphics dimensions
- Fixed: Graphics windows used to assume a minimum size of 640*480 pixels, even if a smaller size was specified
- Added option to disable function argument hinting
- New functions rk.show.message() and rk.show.question() for user interaction from R code
- New options for scripting GUI logic in plugins
- The current object of an active data editor can be referenced in plugins
- Fixed: Placement of several menu items was broken - again - with KDE 4.4 and above
- Allow sorting of results in help search window
- Fixed: CPU usage would go to 100% for no good reason under certain circumstances
- The save-object selector in plugins now allows to save as part of a data.frame / list
- Fixed: On some systems, dev.off() would spawn two new graphics windows
- Support row names in the data.frame-editor
- Fixed: When starting with an empty table, RKWard would sometimes claim that this object has been removed
- Fixed: Would crash when trying to configure toolbars under certain circumstances (workaround for bug in kdelibs)
- Fixed: Crash while analysing some objects returned by XML::xmlParseTree() for invalid XML
- Fixed: Error while installing packages with R 2.11.0, when archiving packages in a non-existing directory
- Added option to autosave script files (enabled by default)
- The tabbar in the main window now shows a context menu with options to close/detach a window
- The tabs in the main window can now be re-ordered by dragging with the mouse (left click if compiled with Qt 4.5 or above, middle click for earlier versions)
- Added alternating row backgrounds in data.frame-editor
